added images and icons

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				    </button>
 				    <div class="navbar-brand">
 					    <a href="index.html">
-					    	<img class="img-responsive" src="images/logo.png" alt="logo">
+					    	<img class="img-responsive" src="images/SCHOFIELD LOGO.png" alt="logo">
 					    </a> 
 				    </div>                   
 				</div><!--/ Logo end -->
@@ -104,15 +104,15 @@
 				<ul class="slides">
 					<li>
 						<div class="overlay2">
-							<img class="" src="images/slider/bg1.jpg" alt="slider">
+							<img class="" src="images/slider/Truck slider image 1.jpg" alt="slider">
 						</div>
 						<div class="flex-caption slider-content">
 	                        <div class="col-md-12 text-center">
 	                    		<h2 class="animated2">
-	                        		Need To Invent The Future!
+	                        		COUNTRY WIDE AND OVER-BORDER
 	                        	</h2>
 	                            <h3 class="animated3">
-	                            	We Making Difference To Great Things Possible
+	                            	ROAD AND RAIL SPECIALIST 
 	                            </h3>
 	                            <p class="animated4"><a href="#" class="slider btn btn-primary white">Check Now</a></p>
 	                        </div>
@@ -120,7 +120,7 @@
 					</li>
 					<li>
 						<div class="overlay2">
-							<img class="" src="images/slider/bg2.jpg" alt="slider">
+							<img class="" src="images/slider/Truck slider image 2.jpg" alt="slider">
 						</div>
 						<div class="flex-caption slider-content">
 	                        <div class="col-md-12 text-center">
@@ -130,24 +130,24 @@
 	                            <h3 class="animated5">
 	                            	We are here to make it happen
 	                            </h3>		
-	                            <p class="animated6"><a href="#" class="slider btn btn-primary white">Buy Now</a></p>	     
+	                            <p class="animated6"><a href="#" class="slider btn btn-primary white">Contact Us</a></p>	     
 	                        </div>
 	                    </div>
 					</li>
 					<li>
 						<div class="overlay2">
-							<img class="" src="images/slider/bg3.jpg" alt="slider">
+							<img class="" src="images/slider/Truck slider image 3.jpg" alt="slider">
 						</div>
 						<div class="flex-caption slider-content">
 	                        <div class="col-md-12 text-center">
 	                            <h2 class="animated7">
-	                                Your Challenge is Our Progress
+									24 hour
 	                            </h2>
 	                            <h3 class="animated8">
-	                            	So, You Don't Need to Go Anywhere Today
+	                            	Operational Control
 	                            </h3>		
 	                            <div class="">
-	                                <a class="animated4 slider btn btn-primary btn-min-block white" href="#">Get Now</a><a class="animated4 slider btn btn-primary btn-min-block solid" href="#">Live Demo</a>
+	                                <a class="animated4 slider btn btn-primary btn-min-block white" href="#">SERVICES</a><a class="animated4 slider btn btn-primary btn-min-block solid" href="#">EMAIL US</a>
 	                            </div>     
 	                        </div>
 	                    </div>
@@ -173,17 +173,17 @@
 					  	</li>
 					  	<li>
 						  	<a class="animated fadeIn" href="#tab_b" data-toggle="tab">
-						  		<span class="tab-icon"><i class="fa fa-briefcase"></i></span>
+						  		<span class="tab-icon"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></span>
 					  			<div class="tab-info">
-						  			<h3>Our Company</h3>
+						  			<h3>Our Mission</h3>
 					  			</div>
 						  	</a>
 						</li>
 					 	<li>
 						  	<a class="animated fadeIn" href="#tab_c" data-toggle="tab">
-						  		<span class="tab-icon"><i class="fa fa-android"></i></span>
+						  		<span class="tab-icon"><i class="fa fa-briefcase" aria-hidden="true"></i></span>
 					  			<div class="tab-info">
-						  			<h3>What We Do</h3>
+						  			<h3>Business Values</h3>
 					  			</div>
 						  	</a>
 						</li>
@@ -206,19 +206,38 @@
 					</ul>
 					<div class="tab-content col-md-9 col-sm-7">
 				        <div class="tab-pane active animated fadeInRight" id="tab_a">
-				        	<i class="fa fa-trophy big"></i>
-				            <h3>We Are Awwared Winning Company</h3> 
-				            <p>Over the year we have lots of experience in our field. In sit amet massa sapien. Vestibulum diam turpis, gravida in lobortis id, ornare a eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis nulla non elit dignissim suscipit. Duis lorem nulla, eleifend.</p>
+				        	<i class="fa fa-info big"></i>
+				            <h3>Who are we</h3> 
+				            <p>Established in 1992, Schofield Logistics are precursors in transportation brokerage, 
+								having solid credentials and a dedicated employee compliment that have 
+								taken pride in providing quality service standards. From humble 
+								beginnings, the enterprise started with a miniscule client base and has 
+								since recorded substantial growth. Primarily the company’s successes are
+								 due to providing every transport need under one organization in an ever
+								 increasing and demanding transport logistics market. With a growing list of 
+								 associations and a formidable client base, Schofield Logistics is truly a 
+								 unique company at the forefront of the industry; and one that is evolutionary in its development, thinking and foresight.</p>
 				        </div>
 				        <div class="tab-pane animated fadeInLeft" id="tab_b">
-				        	<i class="fa fa-briefcase big"></i>
-				            <h3>We Have Worldwide Business</h3> 
-							<p>Helvetica cold-pressed lomo messenger bag ugh. Vinyl jean shorts Austin pork belly PBR retro, Etsy VHS kitsch actually messenger bag pug. Pbrb semiotics try-hard, Schlitz occupy dreamcatcher master cleanse Marfa Vice tofu. </p>							 
+				        	<i class="fa fa-thumbs-o-up big" aria-hidden="true"></i>
+				            <h3>Our Mission</h3> 
+							<p>It is the mission of Schofield Logistics to innovate, develop, implement and manage logistics, 
+								transport and distribution solutions through learning and understanding 
+								our customers business. To achieve this, it is our goal to constantly 
+								strive to be increasingly innovative, flexible and open with all 
+								business partners, customers and suppliers</p>							 
 				        </div>
 				        <div class="tab-pane animated fadeIn" id="tab_c">
-				            <i class="fa fa-android big"></i>
-				            <h3>We Build Readymade Applications</h3> 
-				            <p>Over the year we have lots of experience in our field. In sit amet massa sapien. Vestibulum diam turpis, gravida in lobortis id, ornare a eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis nulla non elit dignissim suscipit. Duis lorem nulla, eleifend.</p>
+				            <i class="fa fa-briefcase big" aria-hidden="true"></i>
+				            <h3>BUSINESS VALUES</h3> 
+				            <p>Values form the foundation of a business, hence our values are designed to guide business activity and reflect the energy and spirit of a company that has a solid foundation to lead change as business evolves. These values include:</p>
+							<ul>
+								<li>The ability to conduct business in an ethical and moral manner</li>
+								<li>The continuous improvement of the organizations performance</li>
+								<li>Ensuring compliance in regularity and legal issues</li>
+								<li>The commitment to successfully provide our customers with services and expertise that remain unequalled, while simultaneously exceeding industry standards</li>
+								<li>To continuously seek knowledge and acquire expertise to transfer advice onto customers, subcontractors and colleagues</li>
+							</ul>
 				        </div>
 				        <div class="tab-pane animated fadeIn" id="tab_d">
 				            <i class="fa fa-pagelines big"></i>
