added some pop ups

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Flexslider -->
 	<link rel="stylesheet" href="css/cd-hero.css">
+	<!--Main CSS for pop ups-->
+	<link rel="stylesheet" href="css/main.css">
 	<!-- Style Swicther -->
 	<link id="style-switch" href="css/presets/preset1.css" media="screen" rel="stylesheet" type="text/css">
 
@@ -482,10 +484,19 @@
 						</div>
 						<div class="team-content">
 							<h5>Monitoring of Cargo Status</h5>
-							<p>View More</p>
+							<a onclick="showPopup();">View More</a>
 						</div>
 					</div>	
-				</div><!--/ Service 1 end -->
+				</div>
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+						<span class="close" onclick="closePopup()">&times;</span>
+						<p>This is some additional information about Transport Subcontractors.</p>
+						<!-- Add more content here if needed -->
+					</div>
+				</div>
+				<!--/ Service 1 end -->
 				<div class="col-md-3 col-sm-6">
 					<div class="team wow slideInLeft">
 						<div class="img-hexagon">
@@ -495,10 +506,19 @@
 						</div>
 						<div class="team-content">
 							<h5>Transport Subcontractors</h5>
-							<p>View More</p>
+							<a onclick="showPopup();">View More</a>
 						</div>
 					</div>
-				</div><!--/ Service 2 end -->
+				</div>
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+						<span class="close" onclick="closePopup()">&times;</span>
+						<p>This is some additional information about Transport Subcontractors.</p>
+						<!-- Add more content here if needed -->
+					</div>
+				</div>
+				<!--/ Service 2 end -->
 				<div class="col-md-3 col-sm-6">
 					<div class="team wow slideInRight">
 						<div class="img-hexagon">
@@ -508,10 +528,19 @@
 						</div>
 						<div class="team-content">
 							<h5>Vehicle Tracking & Monitoring</h5>
-							<p>View More</p>
+							<a onclick="showPopup();">View More</a>
 						</div>
 					</div>
-				</div><!--/ Service 3 end -->
+				</div>
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+						<span class="close" onclick="closePopup()">&times;</span>
+						<p>This is some additional information about Transport Subcontractors.</p>
+						<!-- Add more content here if needed -->
+					</div>
+				</div>
+				<!--/ Service 3 end -->
 				<div class="col-md-3 col-sm-6">
 					<div class="team animate wow slideInRight">
 						<div class="img-hexagon">
@@ -521,10 +550,19 @@
 						</div>
 						<div class="team-content">
 							<h5>Daily Upliftment & Status Report</h5>
-							<p>View More</p>
+							<a onclick="showPopup();">View More</a>
 						</div>
 					</div>
-				</div><!--/ Service 4 end -->
+				</div>
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+						<span class="close" onclick="closePopup()">&times;</span>
+						<p>This is some additional information about Transport Subcontractors.</p>
+						<!-- Add more content here if needed -->
+					</div>
+				</div>
+				<!--/ Service 4 end -->
 				<div class="col-md-3 col-sm-6">
 					<div class="team wow slideInLeft">
 						<div class="img-hexagon">
@@ -534,10 +572,11 @@
 						</div>
 						<div class="team-content">
 							<h5>24 Hour Operation Control</h5>
-							<p>View More</p>
+							<a onclick="showPopup();">View More</a>
 						</div>
 					</div>	
-				</div><!--/ Service 5 end -->
+				</div>
+				<!--/ Service 5 end -->
 				<div class="col-md-3 col-sm-6">
 					<div class="team wow slideInLeft">
 						<div class="img-hexagon">
@@ -547,10 +586,19 @@
 						</div>
 						<div class="team-content">
 							<h5>Cellular Communication</h5>
-							<p>View More</p>
+							<a onclick="showPopup();">View More</a>
 						</div>
 					</div>
-				</div><!--/ Service 6 end -->
+				</div>
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+						<span class="close" onclick="closePopup()">&times;</span>
+						<p>This is some additional information about Transport Subcontractors.</p>
+						<!-- Add more content here if needed -->
+					</div>
+				</div>
+				<!--/ Service 6 end -->
 				<div class="col-md-3 col-sm-6">
 					<div class="team wow slideInRight">
 						<div class="img-hexagon">
@@ -560,10 +608,19 @@
 						</div>
 						<div class="team-content">
 							<h5>Backup Fleet</h5>
-							<p>View More</p>
+							<a onclick="showPopup();">View More</a>
 						</div>
 					</div>
-				</div><!--/ Service 7 end -->
+				</div>
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+						<span class="close" onclick="closePopup()">&times;</span>
+						<p>This is some additional information about Transport Subcontractors.</p>
+						<!-- Add more content here if needed -->
+					</div>
+				</div>
+				<!--/ Service 7 end -->
 				<div class="col-md-3 col-sm-6">
 					<div class="team animate wow slideInRight">
 						<div class="img-hexagon">
@@ -573,10 +630,19 @@
 						</div>
 						<div class="team-content">
 							<h5>Risk Management</h5>
-							<p>View More</p>
+							<a onclick="showPopup();">View More</a>
 						</div>
 					</div>
-				</div><!--/ Service 8 end -->
+				</div>
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+						<span class="close" onclick="closePopup()">&times;</span>
+						<p>This is some additional information about Transport Subcontractors.</p>
+						<!-- Add more content here if needed -->
+					</div>
+				</div>
+				<!--/ Service 8 end -->
 			</div><!--/ Content row end -->
 		</div><!--/ Container end -->
     </section><!--/ Team end -->
@@ -908,6 +974,8 @@
 	<script type="text/javascript" src="js/waypoints.min.js"></script>
 	<!-- Template custom -->
 	<script type="text/javascript" src="js/custom.js"></script>
+	<!--Main JS for popups-->
+	<script type="text/javascript" src="js/main.js"></script>
 	</div><!-- Body inner end -->
 </body>
 </html>
