--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
 			<div class="row">
 				<div class="col-md-12 heading text-center">
 					<span class="icon-pentagon wow bounceIn"><i class="fa fa-suitcase"></i></span>
-					<h2 class="title2">Project Completed
-						<span class="title-desc">A Quality Experience Team with 4 years experience</span>
+					<h2 class="title2">Our Gallery
+						<span class="title-desc">A Quality Experience Team with 6 years experience</span>
 					</h2>
 				</div>
 			</div> <!-- Title row end -->
@@ -347,7 +347,7 @@
 					<div class="col-sm-3 web-design isotope-item">
 						<div class="grid">
 							<figure class="effect-oscar">
-								<img src="images/portfolio/portfolio1.jpg" alt="">
+								<img src="images/Gallery/Gallery-1.jpg" alt="">
 								<figcaption>
 									<h3>Startup Business</h3>
 								</figcaption>			
@@ -358,7 +358,7 @@
 					<div class="col-sm-3 development isotope-item">
 						<div class="grid">
 							<figure class="effect-oscar">
-								<img src="images/portfolio/portfolio2.jpg" alt="">
+								<img src="images/Gallery/Gallery-2.jpg" alt="">
 								<figcaption>
 									<h3>Easy to Lanunch</h3>     
 								</figcaption>				
@@ -369,7 +369,7 @@
 					<div class="col-sm-3 joomla isotope-item">
 						<div class="grid">
 							<figure class="effect-oscar">
-								<img src="images/portfolio/portfolio3.jpg" alt="">
+								<img src="images/Gallery/Gallery-3.jpg" alt="">
 								<figcaption>
 									<h3>Your Business</h3>            
 								</figcaption>				
@@ -380,7 +380,7 @@
 					<div class="col-sm-3 wordpress isotope-item">
 						<div class="grid">
 							<figure class="effect-oscar">
-								<img src="images/portfolio/portfolio4.jpg" alt="">
+								<img src="images/Gallery/Gallery-4.jpg" alt="">
 								<figcaption>
 									<h3>Prego Match</h3>           
 								</figcaption>					
@@ -391,7 +391,7 @@
 					<div class="col-sm-3 joomla isotope-item">
 						<div class="grid">
 							<figure class="effect-oscar">
-								<img src="images/portfolio/portfolio5.jpg" alt="">
+								<img src="images/Gallery/Gallery-5.jpg" alt="">
 								<figcaption>
 									<h3>Fashion Brand</h3>           
 								</figcaption>					
@@ -402,7 +402,7 @@
 					<div class="col-sm-3 development isotope-item">
 						<div class="grid">
 							<figure class="effect-oscar">
-								<img src="images/portfolio/portfolio6.jpg" alt="">
+								<img src="images/Gallery/Gallery-6.jpg" alt="">
 								<figcaption>
 									<h3>The Insidage</h3>            
 								</figcaption>					
@@ -413,7 +413,7 @@
 					<div class="col-sm-3 development isotope-item">
 						<div class="grid">
 							<figure class="effect-oscar">
-								<img src="images/portfolio/portfolio7.jpg" alt="">
+								<img src="images/Gallery/Gallery-7.jpg" alt="">
 								<figcaption>
 									<h3>Light Carpet</h3>            
 								</figcaption>					
@@ -424,7 +424,7 @@
 					<div class="col-sm-3 development isotope-item">
 						<div class="grid">
 							<figure class="effect-oscar">
-								<img src="images/portfolio/portfolio8.jpg" alt="">
+								<img src="images/Gallery/Gallery8.jpg" alt="">
 								<figcaption>
 									<h3>Amazing Keyboard</h3>           
 								</figcaption>					
@@ -470,7 +470,7 @@
 			<div class="row">
 				<div class="col-md-12 heading">
 					<span class="title-icon pull-left"><i class="fa fa-building" aria-hidden="true"></i></span>
-					<h2 class="title">Our Services <span class="title-desc">A Quality Experience Team with 4 years experience</span></h2>
+					<h2 class="title">Our Services <span class="title-desc">A Quality Experience Team with 6 years experience</span></h2>
 				</div>
 			</div><!-- Title row end -->
 
@@ -939,7 +939,6 @@
 		   <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top affix">
 				<button class="btn btn-primary" title="Back to Top"><i class="fa fa-angle-double-up"></i></button>
 			</div>
-		</div><!--/ Container end -->
 	</section><!--/ Footer end -->
 
 	<!-- Javascript Files
