--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                        		<a href="index.html" class="dropdown-toggle">Home</a>
 	                    </li>
 						<li class="dropdown">
-                       		<a href="about2.html" class="dropdown-toggle">About Us</a>
+                       		<a href="#about" class="dropdown-toggle">About Us</a>
 	                    </li>
 						<li class="dropdown">
-                       		<a href="contact.html" class="dropdown-toggle">Services </a>
+                       		<a href="#team" class="dropdown-toggle">Services </a>
 	                    </li>
 	                    <li class="dropdown">
-                       		<a href="service.html" class="dropdown-toggle">Contact Us </a>
+                       		<a href="#contact" class="dropdown-toggle">Contact Us </a>
 	                    	</div>
 	                    </li>
                     </ul>
@@ -116,7 +116,7 @@
 	                            <h3 class="animated3">
 	                            	ROAD AND RAIL SPECIALIST 
 	                            </h3>
-	                            <p class="animated4"><a href="#" class="slider btn btn-primary white">Check Now</a></p>
+	                            <p class="animated4"><a href="#team" class="slider btn btn-primary white">Check Now</a></p>
 	                        </div>
 	                    </div>
 					</li>
@@ -132,7 +132,7 @@
 	                            <h3 class="animated5">
 	                            	We are here to make it happen
 	                            </h3>		
-	                            <p class="animated6"><a href="#" class="slider btn btn-primary white">Contact Us</a></p>	     
+	                            <p class="animated6"><a href="#contact" class="slider btn btn-primary white">Contact Us</a></p>	     
 	                        </div>
 	                    </div>
 					</li>
@@ -149,7 +149,7 @@
 	                            	Operational Control
 	                            </h3>		
 	                            <div class="">
-	                                <a class="animated4 slider btn btn-primary btn-min-block white" href="#">SERVICES</a><a class="animated4 slider btn btn-primary btn-min-block solid" href="#">EMAIL US</a>
+	                                <a class="animated4 slider btn btn-primary btn-min-block white" href="#team">SERVICES</a><a class="animated4 slider btn btn-primary btn-min-block solid" href="mailto:admin@schofieldlogistics.co.za">EMAIL US</a>
 	                            </div>     
 	                        </div>
 	                    </div>
@@ -349,10 +349,7 @@
 							<figure class="effect-oscar">
 								<div class="image-container">
 									<img src="images/Gallery/Gallery-1.jpg" alt="">
-								</div>
-								<figcaption>
-									<h3>Startup Business</h3>
-								</figcaption>			
+								</div>		
 							</figure>
 						</div>
 					</div><!-- Isotope item end -->
@@ -362,10 +359,7 @@
 							<figure class="effect-oscar">
 								<div class="image-container">
 									<img src="images/Gallery/Gallery-2.jpg" alt="">
-								</div>
-								<figcaption>
-									<h3>Easy to Lanunch</h3>     
-								</figcaption>				
+								</div>				
 							</figure>
 						</div>
 					</div><!-- Isotope item end -->
@@ -375,10 +369,7 @@
 							<figure class="effect-oscar">
 								<div class="image-container">
 									<img src="images/Gallery/Gallery-3.jpg" alt="">
-								</div>
-								<figcaption>
-									<h3>Your Business</h3>            
-								</figcaption>				
+								</div>			
 							</figure>
 						</div>
 					</div><!-- Isotope item end -->
@@ -388,10 +379,7 @@
 							<figure class="effect-oscar">
 								<div class="image-container">
 									<img src="images/Gallery/Gallery-4.jpg" alt="">
-								</div>
-								<figcaption>
-									<h3>Prego Match</h3>           
-								</figcaption>					
+								</div>					
 							</figure>
 						</div>
 					</div><!-- Isotope item end -->
@@ -401,10 +389,7 @@
 							<figure class="effect-oscar">
 								<div class="image-container">
 									<img src="images/Gallery/Gallery-5.jpg" alt="">
-								</div>
-								<figcaption>
-									<h3>Fashion Brand</h3>           
-								</figcaption>					
+								</div>				
 							</figure>
 						</div>
 					</div><!-- Isotope item end -->
@@ -413,10 +398,7 @@
 						<div class="grid">
 							<figure class="effect-oscar"><div class="image-container">
 								<img src="images/Gallery/Gallery-6.jpg" alt="">
-							</div>
-								<figcaption>
-									<h3>The Insidage</h3>            
-								</figcaption>					
+							</div>				
 							</figure>
 						</div>
 					</div><!-- Isotope item end -->
@@ -426,10 +408,7 @@
 							<figure class="effect-oscar">
 								<div class="image-container">
 									<img src="images/Gallery/Gallery-7.jpg" alt="">
-								</div>
-								<figcaption>
-									<h3>Light Carpet</h3>            
-								</figcaption>					
+								</div>				
 							</figure>
 						</div>
 					</div><!-- Isotope item end -->
@@ -439,10 +418,7 @@
 							<figure class="effect-oscar">
 								<div class="image-container">
 									<img src="images/Gallery/Gallery8.jpg" alt="">
-								</div>
-								<figcaption>
-									<h3>Amazing Keyboard</h3>           
-								</figcaption>					
+								</div>					
 							</figure>
 						</div>
 					</div><!-- Isotope item end -->
@@ -470,7 +446,7 @@
 					</p>
 					<p>
 						<br>
-						<a href="#" class="btn btn-primary solid">Get In Touch</a>
+						<a href="#contact" class="btn btn-primary solid">Get In Touch</a>
 					</p>
 				</div>
 			</div>
@@ -498,7 +474,7 @@
 							<span class="img-bottom"></span>
 						</div>
 						<div class="team-content">
-							<h4>Monitoring of Cargo Status</h4>
+							<h5>Monitoring of Cargo Status</h5>
 							<button class="btn btn-primary solid" onclick="showPopup('myModal1');">View More</button>
 						</div>
 					</div>	
@@ -527,7 +503,7 @@
 							<span class="img-bottom"></span>
 						</div>
 						<div class="team-content">
-							<h4>Transport Subcontractors</h4>
+							<h5>Transport Subcontractors</h5>
 							<button class="btn btn-primary solid" onclick="showPopup('myModal2');">View More</button>
 						</div>
 					</div>
@@ -556,7 +532,7 @@
 							<span class="img-bottom"></span>
 						</div>
 						<div class="team-content">
-							<h4>Vehicle Tracking & Monitoring</h4>
+							<h5>Vehicle Tracking & Monitoring</h5>
 							<button class="btn btn-primary solid" onclick="showPopup('myModal3');">View More</button>
 						</div>
 					</div>
@@ -584,7 +560,7 @@
 							<span class="img-bottom"></span>
 						</div>
 						<div class="team-content">
-							<h4>Daily Upliftment & Status Report</h4>
+							<h5>Daily Upliftment & Status Report</h5>
 							<button class="btn btn-primary solid" onclick="showPopup('myModal4');">View More</button>
 						</div>
 					</div>
@@ -612,7 +588,7 @@
 							<span class="img-bottom"></span>
 						</div>
 						<div class="team-content">
-							<h4>24 Hour Control</h4>
+							<h5>24 Hour Control</h5>
 							<button class="btn btn-primary solid" onclick="showPopup('myModal5');">View More</button>
 						</div>
 					</div>	
@@ -640,7 +616,7 @@
 							<span class="img-bottom"></span>
 						</div>
 						<div class="team-content">
-							<h4>Cellular Communication</h4>
+							<h5>Cellular Communication</h5>
 							<button class="btn btn-primary solid" onclick="showPopup('myModal6');">View More</button>
 						</div>
 					</div>
@@ -668,7 +644,7 @@
 							<span class="img-bottom"></span>
 						</div>
 						<div class="team-content">
-							<h4>Backup Fleet</h4>
+							<h5>Backup Fleet</h5>
 							<button class="btn btn-primary solid" onclick="showPopup('myModal7');">View More</button>
 						</div>
 					</div>
@@ -697,7 +673,7 @@
 							<span class="img-bottom"></span>
 						</div>
 						<div class="team-content">
-							<h4>Risk Management</h4>
+							<H5>Risk Management</h5>
 							<button class="btn btn-primary solid" onclick="showPopup('myModal8');">View More</button>
 						</div>
 					</div>
@@ -724,13 +700,13 @@
 	
 
 	<!-- Testimonial start-->
-	<section class="testimonial parallax parallax3">
+	<section id="contact" class="testimonial parallax parallax3">
 		<div class="parallax-overlay"></div>
 	  	<div class="container">
 		    <div class="row wow slideInLeft">
 			    <div class="contact-card">
 					<span><h3>Schofield Logistics South Africa</h3></span>
-					<span><i class="fa fa-address-book" aria-hidden="true"></i></span>
+					<span><i class="fa fa-briefcase" aria-hidden="true"></i></span>
 					<h6>Address: 40 Tsessebe, Randjies Park, Midrand, 1685</h6>
 					<span><i class="fa fa-phone-square" aria-hidden="true"></i></span>
 					<h6>Tel: 010 020 5699</h6>
@@ -756,101 +732,12 @@
 				</div>
 			</div>
 			<div class="row">
-				<iframe src="https://www.google.com/maps/place/7D+Corporate+Park+South,+40+Tsessebe+Cres,+Midrand,+Johannesburg,+1683/@-25.9551374,28.1169675,14.27z/data=!4m6!3m5!1s0x1e956fb7769988c1:0xe93299f31e38993a!8m2!3d-25.952054!4d28.138853!16s%2Fg%2F11csm1mfzl?entry=ttu" frameborder="0"></iframe>
+				<div class="row__iframe">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d28699.146691921702!2d28.1169675!3d-25.9551374!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956fb7769988c1%3A0xe93299f31e38993a!2s7D%20Corporate%20Park%20South%2C%2040%20Tsessebe%20Cres%2C%20Midrand%2C%20Johannesburg%2C%201683!5e0!3m2!1sen!2sza!4v1705130904962!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
 			</div><!--/ Content row end -->
 		</div><!--/ Container end -->
 	</section><!-- Newsletter end -->
-	
-
-	<!-- Footer start -->
-	<footer id="footer" class="footer footer2">
-		<div class="container">
-
-			<div class="row">
-
-				<div class="col-md-4 col-sm-12 footer-widget">
-					<h3 class="widget-title">Flickr Photos</h3>
-
-					<div class="img-gallery">
-						<div class="img-container">
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/1.jpg">
-								<img src="images/gallery/1.jpg" alt="">
-							</a>
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/2.jpg">
-								<img src="images/gallery/2.jpg" alt="">
-							</a>
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/3.jpg">
-								<img src="images/gallery/3.jpg" alt="">
-							</a>
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/4.jpg">
-								<img src="images/gallery/4.jpg" alt="">
-							</a>
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/5.jpg">
-								<img src="images/gallery/5.jpg" alt="">
-							</a>
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/6.jpg">
-								<img src="images/gallery/6.jpg" alt="">
-							</a>
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/6.jpg">
-								<img src="images/gallery/7.jpg" alt="">
-							</a>
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/6.jpg">
-								<img src="images/gallery/8.jpg" alt="">
-							</a>
-							<a class="thumb-holder" data-rel="prettyPhoto" href="images/gallery/6.jpg">
-								<img src="images/gallery/9.jpg" alt="">
-							</a>
-						</div>
-					</div>
-
-						
-				</div><!--/ end flickr -->
-
-				<div class="col-md-4 col-sm-12 footer-widget">
-					<h3 class="widget-title">Quick Links</h3>
-
-					<ul class="unstyled arrow">
-						<li><a href="#">About CraftTheme</a></li>
-						<li><a href="#">How We Help</a></li>
-						<li><a href="#">Upcoming Events</a></li>
-						<li><a href="#">Customer Support</a></li>
-						<li><a href="#">Fill a Form</a></li>
-						<li><a href="#">Latest News</a></li>
-						<li><a href="#">Features</a></li>
-						<li><a href="#">Shortcodes</a></li>
-						<li><a href="#">Portfolio</a></li>
-						<li><a href="#">404 Error Page</a></li>
-						<li><a href="#">Coming Soon</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-	
-				</div><!--/ End Recent Posts-->
-
-
-				<div class="col-md-3 col-sm-12 footer-widget footer-about-us">
-					<h3 class="widget-title">About Craft</h3>
-					<p>We are a awward winning multinational company. We believe in quality and standard worldwide.</p>
-					<p><strong>Address: </strong>1102 Saint Marys, Junction City, KS</p>
-					<div class="row">
-						<div class="col-md-6">
-							<strong>Email: </strong>
-							<p>info@craftbd.com</p>
-						</div>
-						<div class="col-md-6">
-							<strong>Phone No.</strong>
-							<p>+(785) 238-4131</p>
-						</div>
-					</div>
-					<br/>
-					<p><a href="#" class="btn btn-primary solid square">Purchase Now <i class="fa fa-long-arrow-right"></i></a></p>
-				</div><!--/ end about us -->
-
-
-
-
-			</div><!-- Row end -->
-		</div><!-- Container end -->
-	</footer><!-- Footer end -->
 	
 
 	<!-- Footer start -->
@@ -861,13 +748,13 @@
 					<ul class="footer-social unstyled">
 						<li>
 							<a title="Twitter" href="#">
-								<span class="icon-pentagon wow bounceIn"><i class="fa fa-twitter"></i></span>
+								<span class="icon-pentagon wow bounceIn"><i class="fa fa-whatsapp"></i></span>
 							</a>
 							<a title="Facebook" href="#">
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-facebook"></i></span>
 							</a>
 							<a title="Google+" href="#">
-								<span class="icon-pentagon wow bounceIn"><i class="fa fa-google-plus"></i></span>
+								<span class="icon-pentagon wow bounceIn"><i class="fa fa-instagram"></i></span>
 							</a>
 							<a title="linkedin" href="#">
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-linkedin"></i></span>
@@ -879,7 +766,7 @@
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-skype"></i></span>
 							</a>
 							<a title="Dribble" href="#">
-								<span class="icon-pentagon wow bounceIn"><i class="fa fa-dribbble"></i></span>
+								<span class="icon-pentagon wow bounceIn"><i class="fa fa-google-plus"></i></span>
 							</a>
 						</li>
 					</ul>
@@ -888,7 +775,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="copyright-info">
-         			 &copy; Copyright 2019 Themefisher. <span>Designed by <a href="https://themefisher.com">Themefisher.com</a></span>
+         			 &copy; Copyright 2024 Schofield Logistics. <span>Designed by <a href="#">Ziaee Technologies</a></span>
         			</div>
 				</div>
 			</div><!--/ Row end -->
