done with indexing bots

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,16 @@
 	================================================== -->
 	<meta charset="utf-8">
     <title>Shofield Logistics</title>
-    <meta name="description" content="">	
-	<meta name="author" content="">
+	<link rel="icon" type="image/x-icon" href="images/s.png">
+	<meta name="google-site-verification" content="HPd0i2_CCLgHBknGu8VBh004KiIndB5ZUYDF2hTleck" />
+	<meta content="all" name="WEBCRAWLERS">
+	<meta name="robots" content="ALL, index, follow">
+	<meta name="distribution" content="Global">
+	<meta name="rating" content="Safe For All">
+	<meta content="ALL, FOLLOW" name="GOOGLEBOTS">
+	<meta content="ALL, FOLLOW" name="YAHOOBOTS">
+	<meta content="ALL, FOLLOW" name="MSNBOTS">
+	<meta content="ALL, FOLLOW" name="BINGBOTS">
 
 	<!-- Mobile Specific Metas
 	================================================== -->
