done with socials

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	================================================== -->
 	<meta charset="utf-8">
     <title>Shofield Logistics</title>
-	<link rel="icon" type="image/x-icon" href="images/s.png">
+	<link rel="icon" type="image/x-icon" href="images/favicon.png">
 	<meta name="google-site-verification" content="HPd0i2_CCLgHBknGu8VBh004KiIndB5ZUYDF2hTleck" />
 	<meta content="all" name="WEBCRAWLERS">
 	<meta name="robots" content="ALL, index, follow">
@@ -748,26 +748,23 @@
 				<div class="col-md-12 text-center">
 					<ul class="footer-social unstyled">
 						<li>
-							<a title="Twitter" href="#">
+							<a title="Twitter" href="https://twitter.com/Schofield_Logis">
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-whatsapp"></i></span>
 							</a>
 							<a title="Facebook" href="#">
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-facebook"></i></span>
 							</a>
-							<a title="Google+" href="#">
+							<a title="Instagram" href="https://www.instagram.com/schofield_logistics/">
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-instagram"></i></span>
 							</a>
-							<a title="linkedin" href="#">
+							<a title="linkedin" href="https://www.linkedin.com/in/schofield-logistics-7493252aa/">
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-linkedin"></i></span>
 							</a>
-							<a title="Pinterest" href="#">
+							<a title="Pinterest" href="https://www.pinterest.com/schofield_logistics/?actingBusinessId=999377110969810064">
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-pinterest"></i></span>
 							</a>
-							<a title="Skype" href="#">
+							<a title="Skype" href="https://join.skype.com/invite/CmZ4Q95olK3r">
 								<span class="icon-pentagon wow bounceIn"><i class="fa fa-skype"></i></span>
-							</a>
-							<a title="Dribble" href="#">
-								<span class="icon-pentagon wow bounceIn"><i class="fa fa-google-plus"></i></span>
 							</a>
 						</li>
 					</ul>
